password encoding,Update & Delete Button in Datatable,error message and unique data

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -44,11 +44,13 @@ default.password.label=Password
 default.signup.label=SignUp
 default.book.label=Books
 default.delete.label=Delete
+default.close.label=Close
 
 default.user.name.label=Name
 default.user.age.label=Age
 default.edit.User.label=Edit Your Account
 default.add.Book.label=Add Book
+default.update.Book.label=Update Book
 default.book.name.label=Book Name
 default.book.author.label=Author Name
 default.book.language.label=Language
