Update Grails Project

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,6 +54,7 @@ default.update.Book.label=Update Book
 default.book.name.label=Book Name
 default.book.author.label=Author Name
 default.book.language.label=Language
+default.book.date.label=Date
 
 default.button.create.label=Create
 default.button.edit.label=Edit
